--- a/views/status.hbs
+++ b/views/status.hbs
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/cyborg/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>
       popN Bot
     </title>
@@ -55,7 +56,9 @@
                 Bot Commands
                 <div class="text-white" id="useful-commands">
                   {{#each availableResponses}}
-                    {{this}},
+                    <div class="badge badge-secondary">
+                      {{this}}
+                    </div>
                   {{/each}}
                 </div>
               </div>
