very rounded UI

--- a/views/status.hbs
+++ b/views/status.hbs
@@ -25,7 +25,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-4">
-          <div class="jumbotron">
+          <div class="jumbotron very-rounded">
             <div class="container-fluid">
               <div class="d-flex justify-content-center align-items-center">
                 <img
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="col-md-8">
-          <div class="jumbotron">
+          <div class="jumbotron very-rounded">
             <div class="container-fluid">
               <h4 class="text-white">
                 Available Commands
@@ -64,7 +64,7 @@
               </div>
             </div>
           </div>
-          <div class="jumbotron">
+          <div class="jumbotron very-rounded">
             <div class="container-fluid">
               <h4 class="text-white">
                 More Features
