--- a/views/status.hbs
+++ b/views/status.hbs
@@ -56,7 +56,7 @@
                 Bot Commands
                 <div class="text-white" id="useful-commands">
                   {{#each availableResponses}}
-                    <div class="badge badge-secondary">
+                    <div class="badge badge-light">
                       {{this}}
                     </div>
                   {{/each}}
